--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -881,15 +881,15 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyK-Yy-17V">
-                                <rect key="frame" x="16" y="286" width="568" height="262"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="16" y="286" width="568" height="270"/>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.94509803921568625" blue="0.87058823529411766" alpha="0.97999999999999998" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wyK-Yy-17V" firstAttribute="leading" secondItem="5E1-Wu-0vn" secondAttribute="leadingMargin" id="8s9-iy-xtm"/>
                             <constraint firstAttribute="centerX" secondItem="byd-UU-zjp" secondAttribute="centerX" id="J81-hy-CqL"/>
-                            <constraint firstItem="cac-e2-LlP" firstAttribute="top" secondItem="wyK-Yy-17V" secondAttribute="bottom" constant="8" id="eeW-DG-zfx"/>
+                            <constraint firstItem="cac-e2-LlP" firstAttribute="top" secondItem="wyK-Yy-17V" secondAttribute="bottom" id="eeW-DG-zfx"/>
                             <constraint firstAttribute="centerX" secondItem="wyK-Yy-17V" secondAttribute="centerX" id="mgF-kb-4w7"/>
                             <constraint firstItem="wyK-Yy-17V" firstAttribute="top" secondItem="byd-UU-zjp" secondAttribute="bottom" constant="8" id="msd-3A-BWh"/>
                             <constraint firstItem="wyK-Yy-17V" firstAttribute="trailing" secondItem="5E1-Wu-0vn" secondAttribute="trailingMargin" id="n8n-9l-yIe"/>
