--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -880,7 +880,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyK-Yy-17V">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyK-Yy-17V" customClass="LineChartView" customModule="Charts">
                                 <rect key="frame" x="16" y="286" width="568" height="270"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.94509803921568625" blue="0.87058823529411766" alpha="0.97999999999999998" colorSpace="calibratedRGB"/>
                             </view>
