--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -829,16 +829,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRa-ua-81B">
-                                                    <rect key="frame" x="18" y="18.5" width="60" height="23.5"/>
+                                                    <rect key="frame" x="18" y="18" width="50" height="23.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="JhX-lj-aOX"/>
+                                                        <constraint firstAttribute="width" constant="50" id="JhX-lj-aOX"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="20"/>
                                                     <color key="textColor" red="0.43787151575088501" green="0.32177186012268066" blue="0.27448359131813049" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ygE-Md-fB1">
-                                                    <rect key="frame" x="76" y="15" width="438" height="31"/>
+                                                    <rect key="frame" x="66" y="15" width="458" height="31"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="450" id="p4h-4K-rJK"/>
                                                     </constraints>
@@ -851,9 +851,9 @@
                                                     </variation>
                                                 </slider>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JW0-s2-RmX">
-                                                    <rect key="frame" x="512" y="18.5" width="70" height="23.5"/>
+                                                    <rect key="frame" x="522" y="18" width="60" height="23.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="70" id="XfB-PE-34h"/>
+                                                        <constraint firstAttribute="width" constant="60" id="XfB-PE-34h"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="20"/>
                                                     <color key="textColor" red="0.43787151575088501" green="0.32177186012268066" blue="0.27448359131813049" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -880,32 +880,55 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyK-Yy-17V" customClass="LineChartView" customModule="Charts">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YSN-oU-ez5" userLabel="GraphFrame">
                                 <rect key="frame" x="16" y="286" width="568" height="270"/>
-                                <color key="backgroundColor" red="0.97647058823529409" green="0.94509803921568625" blue="0.87058823529411766" alpha="0.97999999999999998" colorSpace="calibratedRGB"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qL5-LV-AKn">
+                                        <rect key="frame" x="20" y="230.5" width="16" height="24.5"/>
+                                        <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="21"/>
+                                        <color key="textColor" red="0.85882352939999995" green="0.33725490200000002" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyK-Yy-17V" customClass="LineChartView" customModule="Charts">
+                                        <rect key="frame" x="21" y="20" width="527" height="225.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.98117071390151978" green="0.9539368748664856" blue="0.89111751317977905" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="wyK-Yy-17V" firstAttribute="leading" secondItem="YSN-oU-ez5" secondAttribute="leading" constant="20" id="36s-RK-6NL"/>
+                                    <constraint firstAttribute="bottom" secondItem="wyK-Yy-17V" secondAttribute="bottom" constant="20" id="51s-eX-IeW"/>
+                                    <constraint firstItem="wyK-Yy-17V" firstAttribute="leading" secondItem="qL5-LV-AKn" secondAttribute="trailing" constant="-15" id="NsP-ve-VjK"/>
+                                    <constraint firstItem="qL5-LV-AKn" firstAttribute="top" secondItem="wyK-Yy-17V" secondAttribute="bottom" constant="-15" id="SYo-TO-4wq"/>
+                                    <constraint firstItem="wyK-Yy-17V" firstAttribute="top" secondItem="YSN-oU-ez5" secondAttribute="top" constant="20" id="WhJ-Vb-Yqh"/>
+                                    <constraint firstAttribute="trailing" secondItem="wyK-Yy-17V" secondAttribute="trailing" constant="20" id="hR1-BT-Uev"/>
+                                    <constraint firstItem="qL5-LV-AKn" firstAttribute="leading" secondItem="YSN-oU-ez5" secondAttribute="leading" constant="20" id="hee-yR-gHC"/>
+                                    <constraint firstAttribute="bottom" secondItem="qL5-LV-AKn" secondAttribute="bottom" constant="15" id="saj-LT-Qnh"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="36s-RK-6NL"/>
+                                        <exclude reference="51s-eX-IeW"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wyK-Yy-17V" firstAttribute="leading" secondItem="5E1-Wu-0vn" secondAttribute="leadingMargin" id="8s9-iy-xtm"/>
                             <constraint firstAttribute="centerX" secondItem="byd-UU-zjp" secondAttribute="centerX" id="J81-hy-CqL"/>
-                            <constraint firstItem="cac-e2-LlP" firstAttribute="top" secondItem="wyK-Yy-17V" secondAttribute="bottom" id="eeW-DG-zfx"/>
-                            <constraint firstAttribute="centerX" secondItem="wyK-Yy-17V" secondAttribute="centerX" id="mgF-kb-4w7"/>
-                            <constraint firstItem="wyK-Yy-17V" firstAttribute="top" secondItem="byd-UU-zjp" secondAttribute="bottom" constant="8" id="msd-3A-BWh"/>
-                            <constraint firstItem="wyK-Yy-17V" firstAttribute="trailing" secondItem="5E1-Wu-0vn" secondAttribute="trailingMargin" id="n8n-9l-yIe"/>
+                            <constraint firstItem="YSN-oU-ez5" firstAttribute="leading" secondItem="5E1-Wu-0vn" secondAttribute="leadingMargin" id="LPH-Lk-Svb"/>
+                            <constraint firstItem="YSN-oU-ez5" firstAttribute="top" secondItem="byd-UU-zjp" secondAttribute="bottom" constant="8" id="QNo-hf-QC9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YSN-oU-ez5" secondAttribute="trailing" id="X1i-qv-ntn"/>
+                            <constraint firstItem="cac-e2-LlP" firstAttribute="top" secondItem="YSN-oU-ez5" secondAttribute="bottom" id="qWG-DM-OjG"/>
                             <constraint firstItem="byd-UU-zjp" firstAttribute="top" secondItem="Elu-Z7-SBH" secondAttribute="bottom" constant="8" id="qyR-sS-bQN"/>
                             <constraint firstItem="byd-UU-zjp" firstAttribute="width" secondItem="5E1-Wu-0vn" secondAttribute="width" id="rNJ-CF-rmS"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="mgF-kb-4w7"/>
-                            </mask>
-                        </variation>
                     </view>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="adherenceSliderTable" destination="byd-UU-zjp" id="1wM-R3-375"/>
                         <outlet property="chartView" destination="wyK-Yy-17V" id="Aw4-bh-pnl"/>
+                        <outlet property="graphFrame" destination="YSN-oU-ez5" id="Xpk-t9-DqD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r9i-zm-VnI" userLabel="First Responder" sceneMemberID="firstResponder"/>
